Update index.ejs and add netlify.toml for deployment configuration

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,7 +11,7 @@
                     <!-- Profile Image -->
                     <div class="flex justify-center">
                         <div class="relative">
-                            <img src="/img/p.png" 
+                            <img src="/img/Profile.jpg"
                                  alt="Profile" 
                                  class="w-32 h-32 md:w-48 md:h-48 rounded-full border-4 border-cyber-red shadow-xl hover:scale-105 transition-transform duration-300">
                             <div class="absolute inset-0 rounded-full bg-gradient-to-tr from-cyber-red/20 to-transparent"></div>
